--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,5 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
+
+
 
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
@@ -20,7 +16,7 @@ html {
 body {
   font-size: 2.4rem;
   font-family: sans-serif;
-  color: #5a3e2b;
+  color: #000000;
   font-family: "Quicksand";
   font-weight: 500;
 }
@@ -34,8 +30,8 @@ body {
 
 h1 {
   text-align: center;
-  background-color: #f4a226;
-  font-family: "Monoton";
+  background-color: #f1f997;
+  font-family: Monaco;
   font-size: 8rem;
   text-transform: uppercase;
   font-weight: 400;
@@ -45,7 +41,7 @@ h1 {
 }
 
 .add-form {
-  background-color: #e5771f;
+  background-color: #bbc98a;
   padding: 2.8rem 0;
   display: flex;
   align-items: center;
@@ -61,8 +57,8 @@ h3 {
 button,
 select,
 input {
-  background-color: #ffebb3;
-  color: #5a3e2b;
+  background-color: #4c704d;
+  color: #ffffff;
   font-family: inherit;
   border: none;
   border-radius: 10rem;
@@ -74,12 +70,12 @@ input {
 
 .add-form button {
   text-transform: uppercase;
-  background-color: #76c7ad;
+  background-color: #d4ce5a;
 }
 
 .list {
-  background-color: #5a3e2b;
-  color: #ffebb3;
+  background-color: #ffffff;
+  color: #000000;
   padding: 4rem 0;
 
   display: flex;
@@ -132,7 +128,7 @@ input[type="checkbox"] {
 }
 
 .stats {
-  background-color: #76c7ad;
+  background-color: #b3c776;
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
