--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 
 h1 {
   text-align: center;
-  background-color: #f1f997;
+  background-color: #aeaeae;
   font-family: Monaco;
   font-size: 8rem;
   text-transform: uppercase;
@@ -41,7 +41,7 @@ h1 {
 }
 
 .add-form {
-  background-color: #bbc98a;
+  background-color: #909090;
   padding: 2.8rem 0;
   display: flex;
   align-items: center;
@@ -57,7 +57,7 @@ h3 {
 button,
 select,
 input {
-  background-color: #4c704d;
+  background-color: #788efc;
   color: #ffffff;
   font-family: inherit;
   border: none;
@@ -70,12 +70,12 @@ input {
 
 .add-form button {
   text-transform: uppercase;
-  background-color: #d4ce5a;
+  background-color: #00df5d54;
 }
 
 .list {
-  background-color: #ffffff;
-  color: #000000;
+  background-color: #0c0c0c;
+  color: #dddddd;
   padding: 4rem 0;
 
   display: flex;
